[project]
name = "storage_subnet"
version = "0.0.1"
description = "A storage subnet on Bittensor"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "bittensor==8.4.5",
    "fastapi>=0.110.3",
    "numpy==2.0.2",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "python-multipart>=0.0.19",
    "rich>=13.9.4",
    "starlette==0.37.2",
    "uvicorn>=0.32.1",
    "zfec>=1.6.0.0",
]

[dependency-groups]
dev = ["ruff>=0.8.2"]

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "venv",
]
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["E501"]
select = ["F", "E", "W", "N", "I", "A", "PLC", "PLE", "PLW"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.setuptools]
packages = ["storage_subnet"]

[tool.setuptools.package-dir]
storage_subnet = "storage_subnet"
